--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
   <properties>
     <java.version>17</java.version>
     <spring-boot.version>3.3.0</spring-boot.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
